--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -8,10 +8,6 @@
     text-align: right;
   }
 
-  .field {
-    margin-bottom: 10px;
-  }
-
 </style>
 
 <%= form_for [:admin, @category] do |form| %>
@@ -39,23 +35,23 @@
     </div>
 
     <div class="col">
-      <div class="row field">
-        <%= form.label :name, "Наименование:", class: "col-2" %>
-        <%= form.text_field :name, class: "form-control col-10" %>
+      <div class="row form-group">
+        <%= form.label :name, "Наименование:", class: "col-2 col-form-label" %>
+        <%= form.text_field :name, class: "form-control col-10", autofocus: true %>
       </div>
 
-      <div class="row field">
-        <%= form.label :parent_id, "Родитель:", class: "col-2" %>
+      <div class="row form-group">
+        <%= form.label :parent_id, "Родитель:", class: "col-2 col-form-label" %>
         <%= form.collection_select :parent_id, Category.roots, :id, :name, {:prompt => true}, {:class => "col-10 form-control"} %>
       </div>
 
-      <div class="row field">
-        <%= form.label :position, "Позиция:", class: "col-2" %>
+      <div class="row form-group">
+        <%= form.label :position, "Позиция:", class: "col-2 col-form-label" %>
         <%= form.number_field :position, class: "col-10 form-control" %>
       </div>
 
-      <div class="row field">
-        <%= form.label :property_ids, "Характеристики:", class: "col-2" %>
+      <div class="row form-group">
+        <%= form.label :property_ids, "Характеристики:", class: "col-2 col-form-label" %>
         <%= form.collection_select :property_ids, Property.roots, :id, :name, {}, :multiple => true, class: "col-10 form-control", style: "height: 350px;" %>
       </div>
     </div>
