--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -2,17 +2,14 @@
 
 <div class="row">
   <div class="col-10">
-    <table>
+    <table class="table table-hover">
       <thead>
         <tr>
-          <th>Image</th>
-          <th>Index</th>
-          <th>Category</th>
-          <th>Name</th>
-          <th>Quantity</th>
-          <th>Display</th>
-          <th>Price</th>
-          <th>Actions</th>
+          <th>Изображение</th>
+          <th>Наименование</th>
+          <th>Цена</th>
+          <th>Количество</th>
+          <th></th>
         </tr>
       </thead>
 
@@ -20,33 +17,42 @@
         <% @products.each do |product| %>
           <tr>
             <td>
-              <% if product.attachments? %>
-                <%= image_tag(product.attachments.first.index_admin_thumb.url, alt: 'Image') %>
+              <% product.product_photos.main.each do |photo| %>
+                <%= image_tag(photo.image.url, width: '80px') %>
               <% end %>
             </td>
-            <td><%= product.id %></td>
-            <td><%= product.category.name %></td>
             <td>
-              <ul>
-                <li><%= link_to product.name, edit_admin_product_path(product) %></li>
-                <li><%= product.summary %></li>
-              </ul>
+              <div class="">
+                <%= link_to product.name, edit_admin_product_path(product) %>
+              </div>
+              <div style="font-size: 0.8rem">
+                <%= product.summary %>
+              </div>
             </td>
-            <td><%= product.quantity %></td>
-            <td><%= product.display %></td>
-            <td><%= product.price %></td>
-            <td>
-              <ul>
-                <li><%= link_to 'Edit', edit_admin_product_path(product) %></li>
-                <li><%= link_to 'Destroy', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></li>
-              </ul>
+            <td><%= product.price %> грн.</td>
+            <td style="font-size: 0.8rem">
+              <div class="">
+                <% if product.display %>
+                  Отображается
+                <% else %>
+                  Нет в наличии
+                <% end %>
+              </div>
+              <div class="">
+                <%= product.quantity %> шт.
+              </div>
+            </td>
+            <td class="text-right">
+              <%= link_to admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } do %>
+                &times;
+              <% end %>
             </td>
           </tr>
         <% end %>
       </tbody>
     </table>
   </div>
-  <div class="col-2">
-    <%= link_to 'New Product', new_admin_product_path %>
+  <div class="col-2 text-right">
+    <%= link_to '+ Добавить товар', new_admin_product_path %>
   </div>
 </div>
