--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <title>Оформление заказа | Angar.kh.ua</title>
+<% end %>
+
 <h1>Оформление заказа</h1>
 
 <%= render 'form', order: @order %>
