--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -59,7 +59,7 @@
       <p>*Пароль прийдет на почту. Далее его можно будет сменить в личном кабинете.</p>
 
       <div class="actions">
-        <%= f.submit "Зарегесирироваться", class: "btn btn-primary btn-block" %>
+        <%= f.submit "Зарегесирироваться", class: "btn btn-primary btn-block", style: "color: yellow;" %>
       </div>
     <% end %>
   </div>
