--- a/app/views/admin/products/_edit_form.html.erb
+++ b/app/views/admin/products/_edit_form.html.erb
@@ -99,6 +99,7 @@
     <%= form.submit "Сохранить продукт", class: "btn" %><br/>
     <%= link_to 'Новый продукт', new_admin_product_path, class: "btn" %><br/>
     <%= link_to "Назад", admin_products_path, class: "btn" %>
+    <%= link_to "Посмотреть на сайте", product_path(@product), target: "_blank",class: "btn" %>
   </div>
 </div>
 
