--- a/app/views/patrials/_admin_header.html.erb
+++ b/app/views/patrials/_admin_header.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <nav class="navbar navbar-expand-lg navbar-light bg-light w-100">
-    <a href="/">Angar.kh.ua</a>
+    <a href="/" class="nav-link">Angar.kh.ua</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,21 +8,24 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to Category, admin_categories_path, class: "nav-link" %>
+          <%= link_to "Категории", admin_categories_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to Property, admin_properties_path, class: "nav-link" %>
+          <%= link_to "Характеристики", admin_properties_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to Product, admin_products_path, class: "nav-link" %>
+          <%= link_to "Товары", admin_products_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to Order, admin_orders_path, class: "nav-link" %>
+          <%= link_to "Заказы", admin_orders_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to User, admin_users_path, class: "nav-link" %>
+          <%= link_to "Клиенты", admin_users_path, class: "nav-link" %>
         </li>
       </ul>
     </div>
+    <% if current_admin %>
+      <%= link_to "Выход", destroy_admin_session_path, method: :delete, class: "nav-link" %>
+    <% end %>
   </nav>
 </div>
