--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -42,12 +42,14 @@
 
 <h2>Категории:</h2>
 <div class="row">
+  <% if categories %>
   <% categories.order(:id).each do |category| %>
     <div class="col-3">
       <div class="card text-center">
         <%= link_to image_tag(category.image.url, alt: category.name, class: "img"), category %>
       </div>
     </div>
+  <% end %>
   <% end %>
 </div>
 
