--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -40,7 +40,18 @@
   </a>
 </div>
 
-
+<h2>Категории:</h2>
+<div class="row">
+  <% if categories? %>
+  <% categories.order(:id).each do |category| %>
+    <div class="col-3">
+      <div class="card text-center">
+        <%= link_to image_tag(category.image.url, alt: category.name, class: "img"), category %>
+      </div>
+    </div>
+  <% end %>
+  <% end %>
+</div>
 
 <h1 style="font-size: 1.78rem;">Angar.kh.ua - Компьютерная техника для Вас в наличии и под заказ!!!</h1>
 <p>text</p>
