--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
     <%= csp_meta_tag %>
 
     <%# <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'%>
-    <%# <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %> 
-    <%# <%= favicon_link_tag asset_path('favicon.jpeg'), :rel => 'icon', :type => "image/x-icon" %>
+    <%# <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag asset_path('favicon.jpeg'), :rel => 'icon', :type => "image/x-icon" %>
+
+
 
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
