--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
     <%# <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'%>
     <%# <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= favicon_link_tag asset_path('favicon.jpeg'), :rel => 'icon', :type => "image/x-icon" %>
+    <%# <%= favicon_link_tag asset_path('favicon.jpeg'), :rel => 'icon', :type => "image/x-icon" %> 
 
 
 
