--- a/app/views/patrials/_header.html.erb
+++ b/app/views/patrials/_header.html.erb
@@ -46,7 +46,7 @@
   <div class="row justify-content-between">
     <div class="col-md-auto col-sm-12 text-center">
       <a href="/">
-        <%= image_tag('logo.jpeg', alt: 'logo', style: 'height: 65px;') %>
+        <%# <%= image_tag('logo.jpeg', alt: 'logo', style: 'height: 65px;') %> 
       </a>
     </div>
     <div class="col-md-auto">
