--- a/app/views/patrials/_admin_header.html.erb
+++ b/app/views/patrials/_admin_header.html.erb
@@ -22,6 +22,12 @@
         <li class="nav-item">
           <%= link_to "Клиенты", admin_users_path, class: "nav-link" %>
         </li>
+        <li>
+          <%= link_to "Карусель", admin_carousel_images_path, class: "nav-link" %>
+        </li>
+        <li>
+          <%= link_to "Изображения", admin_app_images_path, class: "nav-link" %>
+        </li>
       </ul>
     </div>
     <% if current_admin %>
