--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -14,15 +14,15 @@
 <% end %>
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100 c-image" src="uploads/carousel/2099993177_2099993177.jpg" alt="First slide">
+      <%= image_tag(carousel_images.first.image.url, class: "d-block w-100") %>
     </div>
+    <% carousel_images.each do |carousel_image| %>
+      <div class="carousel-item">
+        <%= image_tag(carousel_image.image.url, class: "d-block w-100") %>
+      </div>
+    <% end %>
     <!-- <div class="carousel-item">
       <img class="d-block w-100 c-image" src="https://cdn-st1.rtr-vesti.ru/vh/pictures/hd/175/104/4.jpg" alt="Second slide">
     </div>
