--- a/app/views/admin/products/_edit_form.html.erb
+++ b/app/views/admin/products/_edit_form.html.erb
@@ -65,7 +65,7 @@
 
     <div class="row form-group">
       <%= form.label :discription, "Описание:",class: "col-3 col-form-label" %>
-      <%= form.text_area :discription, rows: "5", class: "col-9 form-control" %>
+      <%= form.cktext_area :discription, rows: "5", class: "col-9 form-control" %>
     </div>
 
     <div class="row">
