--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -47,7 +47,7 @@
 
     <div class="row form-group">
       <%= form.label :discription, "Описание:", class: "col-2 col-form-control" %>
-      <%= form.text_area :discription, class: "form-control col-10", rows: "9" %>
+      <%= form.cktext_area :discription, class: "form-control col-10", rows: "9" %>
     </div>
   </div>
 
