--- a/app/views/admin/properties/_form.html.erb
+++ b/app/views/admin/properties/_form.html.erb
@@ -47,8 +47,8 @@
       </div>
 
       <div class="row form-group">
-        <%= form.label :discription, 'Позиция:',class: "col-2 col-form-label" %>
-        <%= form.text_area :discription, rows: '12',class: "form-control col-10" %>
+        <%= form.label :discription, 'Описание:',class: "col-2 col-form-label" %>
+        <%= form.cktext_area :discription, rows: '12',class: "form-control col-10" %>
       </div>
     </div>
 
