--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -13,3 +13,7 @@
 <div id="products_container">
   <%= render "patrials/products" %>
 </div>
+
+<div class="">
+  <%= @category.discription.html_safe %>
+</div>
