--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -129,7 +129,7 @@
 <div class="">
   <h2>Описание:</h2>
   <div style="padding-left: 15px">
-    <%= @product.discription %>
+    <%= @product.discription.html_safe %>
   </div>
 </div>
 
