--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -51,6 +51,11 @@
       </div>
 
       <div class="row form-group">
+        <%= form.label :discription, "Описание:", class: "col-2 col-form-label" %>
+        <%= form.cktext_area :discription, class: "col-10 form-control" %>
+      </div>
+
+      <div class="row form-group">
         <%= form.label :property_ids, "Характеристики:", class: "col-2 col-form-label" %>
         <%= form.collection_select :property_ids, Property.roots, :id, :name, {}, :multiple => true, class: "col-10 form-control", style: "height: 350px;" %>
       </div>
